examples/variable_simple_error.june
// error: can't find variable

let x = 123

123 + (abc + 12)